Issue #217: Complete HTML dashboard implementation with export and testing
- Add comprehensive ExportManager with multiple format support (HTML, JSON, CSV, PDF, Bundle)
- Implement asynchronous export operations for large datasets
- Support individual test exports and filtered result exports
- Add ZIP bundle export with multiple formats and metadata
- Create comprehensive integration test suite for HTML dashboard
- Test end-to-end workflow from report generation to export
- Validate visualization builder, comparison views, and filtering
- Ensure proper server lifecycle management and resource cleanup
- Include performance validation and error handling testing